Finish basic structure

--- a/states/CMakeLists.txt
+++ b/states/CMakeLists.txt
@@ -3,6 +3,12 @@ target_sources(Bomberman
   PUBLIC
     abstract.hpp
     abstract.cpp
+    menu_state.hpp
+    menu_state.cpp
     start.hpp
     start.cpp
+    server_create.hpp
+    server_create.cpp
+    server_connect.hpp
+    server_connect.cpp
 )
