--- a/network/CMakeLists.txt
+++ b/network/CMakeLists.txt
@@ -1,9 +1,7 @@
 cmake_minimum_required(VERSION 3.13.0)
+add_subdirectory(client)
+add_subdirectory(server)
 target_sources(Bomberman
   PUBLIC
-    server.hpp
-    server.cpp
-    client.hpp
-    client.cpp
-    utils.hpp
-    utils.cpp)
+    packet_types.hpp
+    network_params.hpp)
