Prepare GUI for client/server connection handling

--- a/network/CMakeLists.txt
+++ b/network/CMakeLists.txt
@@ -5,4 +5,6 @@ target_sources(Bomberman
   PUBLIC
     packet_types.hpp
     packet_types.cpp
-    network_params.hpp)
+    network_params.hpp
+    utils.hpp
+    utils.cpp)
