Add designer language to allow switching of fonts, textures, sprite management from outside of the code

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -39,9 +39,10 @@ add_executable(Bomberman main.cpp)
 # instructions
 add_subdirectory(states)
 add_subdirectory(window_manager)
-add_subdirectory(texture_manager)
+add_subdirectory(texture_handling)
 add_subdirectory(controls)
 add_subdirectory(network)
+add_subdirectory(game)
 
 # include assets as project dependencies
 add_custom_target(copy_assets
