--- a/game/CMakeLists.txt
+++ b/game/CMakeLists.txt
@@ -1,5 +1,7 @@
 cmake_minimum_required(VERSION 3.13.0)
 target_sources(Bomberman
   PUBLIC
-    src.cpp
-    def.hpp)
+    map.hpp
+    map.cpp
+    tile.hpp
+    tile.cpp)
