--- a/states/CMakeLists.txt
+++ b/states/CMakeLists.txt
@@ -15,4 +15,6 @@ target_sources(Bomberman
     client_connect.cpp
     client_connect_waiting.hpp
     client_connect_waiting.cpp
+    game_state.hpp
+    game_state.cpp
 )
