Implement basic animation handling

--- a/media/config.cfg
+++ b/media/config.cfg
@@ -1,4 +1,14 @@
-TEXTURE media/backgroung.jpeg background
+TEXTURE media/background.jpeg background
 TEXTURE media/bomb_party_v4.png tiles_sprites
 
 FONT media/font.ttf main_font
+
+ANIMATION
+grass 1 50 tiles_sprites
+16 16 16 208
+
+ANIMATION
+p1 3 200 tiles_sprites
+16 16 16 272
+16 16 32 272
+16 16 48 272
