Finish designer language

--- a/media/config.cfg
+++ b/media/config.cfg
@@ -4,11 +4,24 @@ TEXTURE media/bomb_party_v4.png tiles_sprites
 FONT media/font.ttf main_font
 
 ANIMATION
-grass 1 50 tiles_sprites
+grass tiles_sprites STATIC
+1 50
 16 16 16 208
 
 ANIMATION
-p1 3 200 tiles_sprites
+p1 tiles_sprites DIRECTIONAL
+DOWN 3 200
 16 16 16 272
 16 16 32 272
 16 16 48 272
+
+UP 3 200
+16 16 0 272
+16 16 128 272
+16 16 144 272
+
+SIDE 4 200
+16 16 64 272
+16 16 80 272
+16 16 96 272
+16 16 112 272
