--- a/media/config.cfg
+++ b/media/config.cfg
@@ -25,3 +25,13 @@ SIDE 4 200
 16 16 80 272
 16 16 96 272
 16 16 112 272
+
+ANIMATION
+wall_front tiles_sprites STATIC
+1 50
+16 16 160 272
+
+ANIMATION
+wall_side tiles_sprites STATIC
+1 50
+16 16 160 288
