Prepare connection protocol

--- a/network/server/CMakeLists.txt
+++ b/network/server/CMakeLists.txt
@@ -1,5 +1,10 @@
 cmake_minimum_required(VERSION 3.13.0)
 target_sources(Bomberman
   PUBLIC
-    def.hpp
-    src.cpp)
+    server.hpp
+    server.cpp
+    client_info.hpp
+    client_info.cpp
+    game_server.hpp
+    game_server.cpp
+  )
