Finish connection protocol - transitions to game_state from both server and client side

--- a/network/client/CMakeLists.txt
+++ b/network/client/CMakeLists.txt
@@ -1,5 +1,8 @@
 cmake_minimum_required(VERSION 3.13.0)
 target_sources(Bomberman
   PUBLIC
-    def.hpp
-    src.cpp)
+    game_client.hpp
+    game_client.cpp
+    base.hpp
+    base.cpp
+)
