--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -73,7 +73,8 @@
         "thread": "cpp",
         "cfenv": "cpp",
         "typeindex": "cpp",
-        "variant": "cpp"
+        "variant": "cpp",
+        "csetjmp": "cpp"
     }
 
 }
