Handle start of game communication between client and server

--- a/media/map_basic.cfg
+++ b/media/map_basic.cfg
@@ -16,7 +16,7 @@ TILE wall_front NON_WALKABLE 0 12
 TILE wall_front NON_WALKABLE 0 13
 TILE wall_side NON_WALKABLE 0 14
 TILE wall_side NON_WALKABLE 1 0
-TILE grass WALKABLE 1 1
+TILE grass SPAWN 1 1
 TILE grass WALKABLE 1 2
 TILE grass WALKABLE 1 3
 TILE grass WALKABLE 1 4
@@ -28,7 +28,7 @@ TILE grass WALKABLE 1 9
 TILE grass WALKABLE 1 10
 TILE grass WALKABLE 1 11
 TILE grass WALKABLE 1 12
-TILE grass WALKABLE 1 13
+TILE grass SPAWN 1 13
 TILE wall_side NON_WALKABLE 1 14
 TILE wall_side NON_WALKABLE 2 0
 TILE grass WALKABLE 2 1
@@ -196,7 +196,7 @@ TILE wall_front NON_WALKABLE 12 12
 TILE grass WALKABLE 12 13
 TILE wall_side NON_WALKABLE 12 14
 TILE wall_side NON_WALKABLE 13 0
-TILE grass WALKABLE 13 1
+TILE grass SPAWN 13 1
 TILE grass WALKABLE 13 2
 TILE grass WALKABLE 13 3
 TILE grass WALKABLE 13 4
@@ -208,7 +208,7 @@ TILE grass WALKABLE 13 9
 TILE grass WALKABLE 13 10
 TILE grass WALKABLE 13 11
 TILE grass WALKABLE 13 12
-TILE grass WALKABLE 13 13
+TILE grass SPAWN 13 13
 TILE wall_side NON_WALKABLE 13 14
 TILE wall_front NON_WALKABLE 14 0
 TILE wall_front NON_WALKABLE 14 1
