--- a/network/client/CMakeLists.txt
+++ b/network/client/CMakeLists.txt
@@ -3,6 +3,8 @@ target_sources(Bomberman
   PUBLIC
     game_client.hpp
     game_client.cpp
+    client_entity.hpp
+    client_entity.cpp
     base.hpp
     base.cpp
 )
