--- a/media/config.cfg
+++ b/media/config.cfg
@@ -35,3 +35,13 @@ ANIMATION
 wall_side tiles_sprites STATIC
 1 50
 16 16 160 288
+
+ANIMATION
+bomb_no_explosion tiles_sprites STATIC
+6 30
+16 16 64 288
+16 16 80 288
+16 16 96 288
+16 16 112 288
+16 16 128 288
+16 16 144 288
