Add visual explosion effect of bomb - still missing any damage to players

--- a/media/config.cfg
+++ b/media/config.cfg
@@ -45,3 +45,38 @@ bomb_no_explosion tiles_sprites STATIC
 16 16 112 288
 16 16 128 288
 16 16 144 288
+
+ANIMATION
+exp_center tiles_sprites STATIC
+1 50
+16 16 32 288
+
+ANIMATION
+exp_horizontal tiles_sprites STATIC
+1 50
+16 16 16 288
+
+ANIMATION
+exp_right tiles_sprites STATIC
+1 50
+16 16 48 288
+
+ANIMATION
+exp_left tiles_sprites STATIC
+1 50
+16 16 0 288
+
+ANIMATION
+exp_vertical tiles_sprites STATIC
+1 50
+16 16 224 224
+
+ANIMATION
+exp_up tiles_sprites STATIC
+1 50
+16 16 224 208
+
+ANIMATION
+exp_down tiles_sprites STATIC
+1 50
+16 16 224 240
