--- a/media/config.cfg
+++ b/media/config.cfg
@@ -2,6 +2,7 @@ TEXTURE media/background.jpeg background
 TEXTURE media/bomb_party_v4.png tiles_sprites
 
 FONT media/font.ttf main_font
+FONT media/Raleway-Medium.ttf game_font
 
 ANIMATION
 grass tiles_sprites STATIC
