Add hearts notification, load sprites less often

--- a/media/config.cfg
+++ b/media/config.cfg
@@ -1,8 +1,14 @@
 TEXTURE media/background.jpeg background
 TEXTURE media/bomb_party_v4.png tiles_sprites
+TEXTURE media/hearts.png heart_texture
 
 FONT media/font.ttf main_font
 FONT media/Raleway-Medium.ttf game_font
+
+ANIMATION
+heart heart_texture STATIC
+1 50
+16 16 0 0
 
 ANIMATION
 grass tiles_sprites STATIC
