REFACTOR - divide sources for GameMapLogic and GameMapRenderable to different .cpp .hpp files

--- a/game/CMakeLists.txt
+++ b/game/CMakeLists.txt
@@ -3,6 +3,10 @@ target_sources(Bomberman
   PUBLIC
     map.hpp
     map.cpp
+    map_renderable.hpp
+    map_renderable.cpp
+    map_logic.hpp
+    map_logic.cpp
     entity.hpp
     entity.cpp
 )
