--- a/media/config.cfg
+++ b/media/config.cfg
@@ -11,6 +11,11 @@ heart heart_texture STATIC
 16 16 0 0
 
 ANIMATION
+soft_block tiles_sprites STATIC
+1 50
+16 16 144 208
+
+ANIMATION
 grass tiles_sprites STATIC
 1 50
 16 16 16 208
