--- a/media/map_basic.cfg
+++ b/media/map_basic.cfg
@@ -17,197 +17,197 @@ TILE wall_front NON_WALKABLE 0 13
 TILE wall_side NON_WALKABLE 0 14
 TILE wall_side NON_WALKABLE 1 0
 TILE grass SPAWN 1 1
-TILE grass WALKABLE 1 2
-TILE grass WALKABLE 1 3
-TILE grass WALKABLE 1 4
-TILE grass WALKABLE 1 5
-TILE grass WALKABLE 1 6
-TILE grass WALKABLE 1 7
-TILE grass WALKABLE 1 8
-TILE grass WALKABLE 1 9
-TILE grass WALKABLE 1 10
-TILE grass WALKABLE 1 11
-TILE grass WALKABLE 1 12
+TILE grass FREE 1 2
+TILE grass FREE 1 3
+TILE grass POSSIBLY_WALKABLE 1 4
+TILE grass POSSIBLY_WALKABLE 1 5
+TILE grass POSSIBLY_WALKABLE 1 6
+TILE grass POSSIBLY_WALKABLE 1 7
+TILE grass POSSIBLY_WALKABLE 1 8
+TILE grass POSSIBLY_WALKABLE 1 9
+TILE grass POSSIBLY_WALKABLE 1 10
+TILE grass FREE 1 11
+TILE grass FREE 1 12
 TILE grass SPAWN 1 13
 TILE wall_side NON_WALKABLE 1 14
 TILE wall_side NON_WALKABLE 2 0
-TILE grass WALKABLE 2 1
+TILE grass FREE 2 1
 TILE wall_front NON_WALKABLE 2 2
-TILE grass WALKABLE 2 3
+TILE grass POSSIBLY_WALKABLE 2 3
 TILE wall_front NON_WALKABLE 2 4
-TILE grass WALKABLE 2 5
+TILE grass POSSIBLY_WALKABLE 2 5
 TILE wall_front NON_WALKABLE 2 6
-TILE grass WALKABLE 2 7
+TILE grass POSSIBLY_WALKABLE 2 7
 TILE wall_front NON_WALKABLE 2 8
-TILE grass WALKABLE 2 9
+TILE grass POSSIBLY_WALKABLE 2 9
 TILE wall_front NON_WALKABLE 2 10
-TILE grass WALKABLE 2 11
+TILE grass POSSIBLY_WALKABLE 2 11
 TILE wall_front NON_WALKABLE 2 12
-TILE grass WALKABLE 2 13
+TILE grass FREE 2 13
 TILE wall_side NON_WALKABLE 2 14
 TILE wall_side NON_WALKABLE 3 0
-TILE grass WALKABLE 3 1
-TILE grass WALKABLE 3 2
-TILE grass WALKABLE 3 3
-TILE grass WALKABLE 3 4
-TILE grass WALKABLE 3 5
-TILE grass WALKABLE 3 6
-TILE grass WALKABLE 3 7
-TILE grass WALKABLE 3 8
-TILE grass WALKABLE 3 9
-TILE grass WALKABLE 3 10
-TILE grass WALKABLE 3 11
-TILE grass WALKABLE 3 12
-TILE grass WALKABLE 3 13
+TILE grass FREE 3 1
+TILE grass POSSIBLY_WALKABLE 3 2
+TILE grass POSSIBLY_WALKABLE 3 3
+TILE grass POSSIBLY_WALKABLE 3 4
+TILE grass POSSIBLY_WALKABLE 3 5
+TILE grass POSSIBLY_WALKABLE 3 6
+TILE grass POSSIBLY_WALKABLE 3 7
+TILE grass POSSIBLY_WALKABLE 3 8
+TILE grass POSSIBLY_WALKABLE 3 9
+TILE grass POSSIBLY_WALKABLE 3 10
+TILE grass POSSIBLY_WALKABLE 3 11
+TILE grass POSSIBLY_WALKABLE 3 12
+TILE grass FREE 3 13
 TILE wall_side NON_WALKABLE 3 14
 TILE wall_side NON_WALKABLE 4 0
-TILE grass WALKABLE 4 1
+TILE grass POSSIBLY_WALKABLE 4 1
 TILE wall_front NON_WALKABLE 4 2
-TILE grass WALKABLE 4 3
+TILE grass POSSIBLY_WALKABLE 4 3
 TILE wall_front NON_WALKABLE 4 4
-TILE grass WALKABLE 4 5
+TILE grass POSSIBLY_WALKABLE 4 5
 TILE wall_front NON_WALKABLE 4 6
-TILE grass WALKABLE 4 7
+TILE grass POSSIBLY_WALKABLE 4 7
 TILE wall_front NON_WALKABLE 4 8
-TILE grass WALKABLE 4 9
+TILE grass POSSIBLY_WALKABLE 4 9
 TILE wall_front NON_WALKABLE 4 10
-TILE grass WALKABLE 4 11
+TILE grass POSSIBLY_WALKABLE 4 11
 TILE wall_front NON_WALKABLE 4 12
-TILE grass WALKABLE 4 13
+TILE grass POSSIBLY_WALKABLE 4 13
 TILE wall_side NON_WALKABLE 4 14
 TILE wall_side NON_WALKABLE 5 0
-TILE grass WALKABLE 5 1
-TILE grass WALKABLE 5 2
-TILE grass WALKABLE 5 3
-TILE grass WALKABLE 5 4
-TILE grass WALKABLE 5 5
-TILE grass WALKABLE 5 6
-TILE grass WALKABLE 5 7
-TILE grass WALKABLE 5 8
-TILE grass WALKABLE 5 9
-TILE grass WALKABLE 5 10
-TILE grass WALKABLE 5 11
-TILE grass WALKABLE 5 12
-TILE grass WALKABLE 5 13
+TILE grass POSSIBLY_WALKABLE 5 1
+TILE grass POSSIBLY_WALKABLE 5 2
+TILE grass POSSIBLY_WALKABLE 5 3
+TILE grass POSSIBLY_WALKABLE 5 4
+TILE grass POSSIBLY_WALKABLE 5 5
+TILE grass POSSIBLY_WALKABLE 5 6
+TILE grass POSSIBLY_WALKABLE 5 7
+TILE grass POSSIBLY_WALKABLE 5 8
+TILE grass POSSIBLY_WALKABLE 5 9
+TILE grass POSSIBLY_WALKABLE 5 10
+TILE grass POSSIBLY_WALKABLE 5 11
+TILE grass POSSIBLY_WALKABLE 5 12
+TILE grass POSSIBLY_WALKABLE 5 13
 TILE wall_side NON_WALKABLE 5 14
 TILE wall_side NON_WALKABLE 6 0
-TILE grass WALKABLE 6 1
+TILE grass POSSIBLY_WALKABLE 6 1
 TILE wall_front NON_WALKABLE 6 2
-TILE grass WALKABLE 6 3
+TILE grass POSSIBLY_WALKABLE 6 3
 TILE wall_front NON_WALKABLE 6 4
-TILE grass WALKABLE 6 5
+TILE grass POSSIBLY_WALKABLE 6 5
 TILE wall_front NON_WALKABLE 6 6
-TILE grass WALKABLE 6 7
+TILE grass POSSIBLY_WALKABLE 6 7
 TILE wall_front NON_WALKABLE 6 8
-TILE grass WALKABLE 6 9
+TILE grass POSSIBLY_WALKABLE 6 9
 TILE wall_front NON_WALKABLE 6 10
-TILE grass WALKABLE 6 11
+TILE grass POSSIBLY_WALKABLE 6 11
 TILE wall_front NON_WALKABLE 6 12
-TILE grass WALKABLE 6 13
+TILE grass POSSIBLY_WALKABLE 6 13
 TILE wall_side NON_WALKABLE 6 14
 TILE wall_side NON_WALKABLE 7 0
-TILE grass WALKABLE 7 1
-TILE grass WALKABLE 7 2
-TILE grass WALKABLE 7 3
-TILE grass WALKABLE 7 4
-TILE grass WALKABLE 7 5
-TILE grass WALKABLE 7 6
-TILE grass WALKABLE 7 7
-TILE grass WALKABLE 7 8
-TILE grass WALKABLE 7 9
-TILE grass WALKABLE 7 10
-TILE grass WALKABLE 7 11
-TILE grass WALKABLE 7 12
-TILE grass WALKABLE 7 13
+TILE grass POSSIBLY_WALKABLE 7 1
+TILE grass POSSIBLY_WALKABLE 7 2
+TILE grass POSSIBLY_WALKABLE 7 3
+TILE grass POSSIBLY_WALKABLE 7 4
+TILE grass POSSIBLY_WALKABLE 7 5
+TILE grass POSSIBLY_WALKABLE 7 6
+TILE grass POSSIBLY_WALKABLE 7 7
+TILE grass POSSIBLY_WALKABLE 7 8
+TILE grass POSSIBLY_WALKABLE 7 9
+TILE grass POSSIBLY_WALKABLE 7 10
+TILE grass POSSIBLY_WALKABLE 7 11
+TILE grass POSSIBLY_WALKABLE 7 12
+TILE grass POSSIBLY_WALKABLE 7 13
 TILE wall_side NON_WALKABLE 7 14
 TILE wall_side NON_WALKABLE 8 0
-TILE grass WALKABLE 8 1
+TILE grass POSSIBLY_WALKABLE 8 1
 TILE wall_front NON_WALKABLE 8 2
-TILE grass WALKABLE 8 3
+TILE grass POSSIBLY_WALKABLE 8 3
 TILE wall_front NON_WALKABLE 8 4
-TILE grass WALKABLE 8 5
+TILE grass POSSIBLY_WALKABLE 8 5
 TILE wall_front NON_WALKABLE 8 6
-TILE grass WALKABLE 8 7
+TILE grass POSSIBLY_WALKABLE 8 7
 TILE wall_front NON_WALKABLE 8 8
-TILE grass WALKABLE 8 9
+TILE grass POSSIBLY_WALKABLE 8 9
 TILE wall_front NON_WALKABLE 8 10
-TILE grass WALKABLE 8 11
+TILE grass POSSIBLY_WALKABLE 8 11
 TILE wall_front NON_WALKABLE 8 12
-TILE grass WALKABLE 8 13
+TILE grass POSSIBLY_WALKABLE 8 13
 TILE wall_side NON_WALKABLE 8 14
 TILE wall_side NON_WALKABLE 9 0
-TILE grass WALKABLE 9 1
-TILE grass WALKABLE 9 2
-TILE grass WALKABLE 9 3
-TILE grass WALKABLE 9 4
-TILE grass WALKABLE 9 5
-TILE grass WALKABLE 9 6
-TILE grass WALKABLE 9 7
-TILE grass WALKABLE 9 8
-TILE grass WALKABLE 9 9
-TILE grass WALKABLE 9 10
-TILE grass WALKABLE 9 11
-TILE grass WALKABLE 9 12
-TILE grass WALKABLE 9 13
+TILE grass POSSIBLY_WALKABLE 9 1
+TILE grass POSSIBLY_WALKABLE 9 2
+TILE grass POSSIBLY_WALKABLE 9 3
+TILE grass POSSIBLY_WALKABLE 9 4
+TILE grass POSSIBLY_WALKABLE 9 5
+TILE grass POSSIBLY_WALKABLE 9 6
+TILE grass POSSIBLY_WALKABLE 9 7
+TILE grass POSSIBLY_WALKABLE 9 8
+TILE grass POSSIBLY_WALKABLE 9 9
+TILE grass POSSIBLY_WALKABLE 9 10
+TILE grass POSSIBLY_WALKABLE 9 11
+TILE grass POSSIBLY_WALKABLE 9 12
+TILE grass POSSIBLY_WALKABLE 9 13
 TILE wall_side NON_WALKABLE 9 14
 TILE wall_side NON_WALKABLE 10 0
-TILE grass WALKABLE 10 1
+TILE grass POSSIBLY_WALKABLE 10 1
 TILE wall_front NON_WALKABLE 10 2
-TILE grass WALKABLE 10 3
+TILE grass POSSIBLY_WALKABLE 10 3
 TILE wall_front NON_WALKABLE 10 4
-TILE grass WALKABLE 10 5
+TILE grass POSSIBLY_WALKABLE 10 5
 TILE wall_front NON_WALKABLE 10 6
-TILE grass WALKABLE 10 7
+TILE grass POSSIBLY_WALKABLE 10 7
 TILE wall_front NON_WALKABLE 10 8
-TILE grass WALKABLE 10 9
+TILE grass POSSIBLY_WALKABLE 10 9
 TILE wall_front NON_WALKABLE 10 10
-TILE grass WALKABLE 10 11
+TILE grass POSSIBLY_WALKABLE 10 11
 TILE wall_front NON_WALKABLE 10 12
-TILE grass WALKABLE 10 13
+TILE grass POSSIBLY_WALKABLE 10 13
 TILE wall_side NON_WALKABLE 10 14
 TILE wall_side NON_WALKABLE 11 0
-TILE grass WALKABLE 11 1
-TILE grass WALKABLE 11 2
-TILE grass WALKABLE 11 3
-TILE grass WALKABLE 11 4
-TILE grass WALKABLE 11 5
-TILE grass WALKABLE 11 6
-TILE grass WALKABLE 11 7
-TILE grass WALKABLE 11 8
-TILE grass WALKABLE 11 9
-TILE grass WALKABLE 11 10
-TILE grass WALKABLE 11 11
-TILE grass WALKABLE 11 12
-TILE grass WALKABLE 11 13
+TILE grass FREE 11 1
+TILE grass POSSIBLY_WALKABLE 11 2
+TILE grass POSSIBLY_WALKABLE 11 3
+TILE grass POSSIBLY_WALKABLE 11 4
+TILE grass POSSIBLY_WALKABLE 11 5
+TILE grass POSSIBLY_WALKABLE 11 6
+TILE grass POSSIBLY_WALKABLE 11 7
+TILE grass POSSIBLY_WALKABLE 11 8
+TILE grass POSSIBLY_WALKABLE 11 9
+TILE grass POSSIBLY_WALKABLE 11 10
+TILE grass POSSIBLY_WALKABLE 11 11
+TILE grass POSSIBLY_WALKABLE 11 12
+TILE grass FREE 11 13
 TILE wall_side NON_WALKABLE 11 14
 TILE wall_side NON_WALKABLE 12 0
-TILE grass WALKABLE 12 1
+TILE grass FREE 12 1
 TILE wall_front NON_WALKABLE 12 2
-TILE grass WALKABLE 12 3
+TILE grass POSSIBLY_WALKABLE 12 3
 TILE wall_front NON_WALKABLE 12 4
-TILE grass WALKABLE 12 5
+TILE grass POSSIBLY_WALKABLE 12 5
 TILE wall_front NON_WALKABLE 12 6
-TILE grass WALKABLE 12 7
+TILE grass POSSIBLY_WALKABLE 12 7
 TILE wall_front NON_WALKABLE 12 8
-TILE grass WALKABLE 12 9
+TILE grass POSSIBLY_WALKABLE 12 9
 TILE wall_front NON_WALKABLE 12 10
-TILE grass WALKABLE 12 11
+TILE grass POSSIBLY_WALKABLE 12 11
 TILE wall_front NON_WALKABLE 12 12
-TILE grass WALKABLE 12 13
+TILE grass FREE 12 13
 TILE wall_side NON_WALKABLE 12 14
 TILE wall_side NON_WALKABLE 13 0
 TILE grass SPAWN 13 1
-TILE grass WALKABLE 13 2
-TILE grass WALKABLE 13 3
-TILE grass WALKABLE 13 4
-TILE grass WALKABLE 13 5
-TILE grass WALKABLE 13 6
-TILE grass WALKABLE 13 7
-TILE grass WALKABLE 13 8
-TILE grass WALKABLE 13 9
-TILE grass WALKABLE 13 10
-TILE grass WALKABLE 13 11
-TILE grass WALKABLE 13 12
+TILE grass FREE 13 2
+TILE grass FREE 13 3
+TILE grass POSSIBLY_WALKABLE 13 4
+TILE grass POSSIBLY_WALKABLE 13 5
+TILE grass POSSIBLY_WALKABLE 13 6
+TILE grass POSSIBLY_WALKABLE 13 7
+TILE grass POSSIBLY_WALKABLE 13 8
+TILE grass POSSIBLY_WALKABLE 13 9
+TILE grass POSSIBLY_WALKABLE 13 10
+TILE grass FREE 13 11
+TILE grass FREE 13 12
 TILE grass SPAWN 13 13
 TILE wall_side NON_WALKABLE 13 14
 TILE wall_front NON_WALKABLE 14 0
