REFACTOR - dividing capabilities of window_manager to window_manager and texture loader, storing sf::Font as const reference instead of pointer

--- a/texture_handling/CMakeLists.txt
+++ b/texture_handling/CMakeLists.txt
@@ -3,4 +3,6 @@ target_sources(Bomberman
   PUBLIC
     texture_manager.hpp
     texture_manager.cpp
+    texture_loader.hpp
+    texture_loader.cpp
 )
