REFACTOR - dividing texture_manager into sources animation and anim_object

--- a/texture_handling/CMakeLists.txt
+++ b/texture_handling/CMakeLists.txt
@@ -5,4 +5,8 @@ target_sources(Bomberman
     texture_manager.cpp
     texture_loader.hpp
     texture_loader.cpp
+    anim_object.hpp
+    anim_object.cpp
+    animation.hpp
+    animation.cpp
 )
