Implement StyleLoader class to load button and text styles from config file instead of specifying them in code

--- a/controls/CMakeLists.txt
+++ b/controls/CMakeLists.txt
@@ -8,4 +8,7 @@ target_sources(Bomberman
     text_field.cpp
     text_field.hpp
     control_grid.hpp
-    control_grid.cpp)
+    control_grid.cpp
+    style_loader.hpp
+    style_loader.cpp
+)
