--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -14,6 +14,8 @@ if (WIN32)
   message(WARNING "Detected that you're on windows! ")
   set(SFML_PREFIX "${CMAKE_CURRENT_SOURCE_DIR}/SFML-2.5.1")
   set(SFML_INCLUDES "${SFML_PREFIX}/include")
+else()
+  set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -pthread")
 endif()
 
 # Enable debug symbols by default
@@ -40,7 +42,6 @@ find_package(SFML 2.5.1
 
 # set cmake multithreaded flags
 if (NOT _on_windows)
-    set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -pthread")
 endif()
 
 # Compile executable
