REFACTOR - gui management system - rethink resizing, vertical and horizontal menus

--- a/media/button_style.cfg
+++ b/media/button_style.cfg
@@ -6,7 +6,10 @@ BORDER_HIGH TRANSPARENT
 TEXT BLACK
 TEXT_HIGH BLUE
 FONT main_font
-BORDER_SIZE 0
+BORDER_SIZE 1
+DEFAULT_WIDTH 150
+SPACING_X 2
+SPACING_Y 2
 
 DEFINE CUSTOM_1
 250 188 188 50
@@ -20,3 +23,25 @@ TEXT BLACK
 TEXT_HIGH BLACK
 FONT main_font
 BORDER_SIZE 1
+DEFAULT_WIDTH 150
+SPACING_X 3
+SPACING_Y 3
+
+DEFINE GRAY
+58 58 58 255
+
+DEFINE MORE_GRAY
+27 27 27 255
+
+STYLE game_button
+BACKGROUND GRAY
+BACKGROUND_HIGH MORE_GRAY
+BORDER BLACK
+BORDER_HIGH BLACK
+TEXT WHITE
+TEXT_HIGH WHITE
+FONT game_font
+BORDER_SIZE 1
+DEFAULT_WIDTH 150
+SPACING_X 10
+SPACING_Y 13
