--- a/media/menu_configs.cfg
+++ b/media/menu_configs.cfg
@@ -6,6 +6,7 @@ X 0
 Y 0
 LETTER_SIZE 30
 FACTOR 0.38
+TYPE VERTICAL
 
 
 MENU server_create
@@ -16,6 +17,7 @@ X 0
 Y 0
 LETTER_SIZE 25
 FACTOR 0.2
+TYPE VERTICAL
 
 MENU server_wait
 BUTTON_STYLE button
@@ -25,6 +27,7 @@ X 0
 Y 0
 LETTER_SIZE 25
 FACTOR 0.2
+TYPE VERTICAL
 
 MENU client_connect
 BUTTON_STYLE button
@@ -34,6 +37,7 @@ X 0
 Y 0
 LETTER_SIZE 25
 FACTOR 0.2
+TYPE VERTICAL
 
 MENU client_wait
 BUTTON_STYLE button
@@ -43,3 +47,14 @@ X 100
 Y 100
 LETTER_SIZE 25
 FACTOR 0
+TYPE VERTICAL
+
+MENU game_menu
+BUTTON_STYLE game_button
+TEXT_STYLE NULL
+DEFAULT_WIDTH  0
+X 0
+Y 0.9
+LETTER_SIZE 25
+FACTOR 0
+TYPE HORIZONTAL
