Add bomb manager and resolve issues with disconnecting and quitting the game

--- a/media/config.cfg
+++ b/media/config.cfg
@@ -21,7 +21,7 @@ grass tiles_sprites STATIC
 16 16 16 208
 
 ANIMATION
-p1 tiles_sprites DIRECTIONAL
+p3 tiles_sprites DIRECTIONAL
 DOWN 3 80
 16 16 16 272
 16 16 32 272
@@ -39,6 +39,60 @@ SIDE 4 80
 16 16 112 272
 
 ANIMATION
+p2 tiles_sprites DIRECTIONAL
+DOWN 3 80
+16 16 16 256
+16 16 32 256
+16 16 48 256
+
+UP 3 80
+16 16 0 256
+16 16 128 256
+16 16 144 256
+
+SIDE 4 80
+16 16 64 256
+16 16 80 256
+16 16 96 256
+16 16 112 256
+
+ANIMATION
+p1 tiles_sprites DIRECTIONAL
+DOWN 3 80
+16 16 16 240
+16 16 32 240
+16 16 48 240
+
+UP 3 80
+16 16 0 240
+16 16 128 240
+16 16 144 240
+
+SIDE 4 80
+16 16 64 240
+16 16 80 240
+16 16 96 240
+16 16 112 240
+
+ANIMATION
+p0 tiles_sprites DIRECTIONAL
+DOWN 3 80
+16 16 16 224
+16 16 32 224
+16 16 48 224
+
+UP 3 80
+16 16 0 224
+16 16 128 224
+16 16 144 224
+
+SIDE 4 80
+16 16 64 224
+16 16 80 224
+16 16 96 224
+16 16 112 224
+
+ANIMATION
 wall_front tiles_sprites STATIC
 1 50
 16 16 160 272
@@ -50,7 +104,7 @@ wall_side tiles_sprites STATIC
 
 ANIMATION
 bomb_no_explosion tiles_sprites STATIC
-9 260
+9 167
 16 16 64 288
 16 16 80 288
 16 16 96 288
