--- a/media/config.cfg
+++ b/media/config.cfg
@@ -1,5 +1,5 @@
 TEXTURE media/background.jpeg background
-TEXTURE media/bomb_party_v4.png tiles_sprites
+TEXTURE media/bomb_party_v4_1.png tiles_sprites
 TEXTURE media/hearts.png heart_texture
 
 FONT media/font.ttf main_font
