--- a/media/config.cfg
+++ b/media/config.cfg
@@ -1,6 +1,9 @@
 TEXTURE media/background.jpeg background
-TEXTURE media/bomb_party_v4_1.png tiles_sprites
+TEXTURE media/bomb_party_v4.png tiles_sprites
 TEXTURE media/hearts.png heart_texture
+TEXTURE media/boots.png boot_texture
+TEXTURE media/tnt.png tnt_texture
+TEXTURE media/mirror.png mirror_texture
 
 FONT media/font.ttf main_font
 FONT media/Raleway-Medium.ttf game_font
@@ -11,9 +14,19 @@ heart heart_texture STATIC
 16 16 0 0
 
 ANIMATION
-power_1 tiles_sprites STATIC
+power_1 boot_texture STATIC
 1 50
-16 16 64 208
+16 16 0 0
+
+ANIMATION
+power_2 tnt_texture STATIC
+1 50
+16 16 0 0
+
+ANIMATION
+power_3 mirror_texture STATIC
+1 50
+16 16 0 0
 
 ANIMATION
 soft_block tiles_sprites STATIC
