--- a/states/CMakeLists.txt
+++ b/states/CMakeLists.txt
@@ -15,6 +15,8 @@ target_sources(Bomberman
     client_connect.cpp
     client_connect_waiting.hpp
     client_connect_waiting.cpp
+    starting_game.hpp
+    starting_game.cpp
     game_state.hpp
     game_state.cpp
 )
