PIPELINE: no parallelism

--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -12,11 +12,9 @@ trigger:
 pool:
   vmImage: ubuntu-latest
 
-steps:
-- script: echo Hello, world!
-  displayName: 'Run a one-line script'
-
-- script: |
-    echo Add other tasks to build, test, and deploy your project.
-    echo See https://aka.ms/yaml
-  displayName: 'Run a multi-line script'
+stages:
+  - stage: Hello World
+    jobs:
+      - job: Hello World
+      steps:
+        - script: echo "Hello World"
