Remove magic strings - media dir path

--- a/media/config.cfg
+++ b/media/config.cfg
@@ -1,12 +1,12 @@
-TEXTURE media/background.jpeg background
-TEXTURE media/bomb_party_v4.png tiles_sprites
-TEXTURE media/hearts.png heart_texture
-TEXTURE media/boots.png boot_texture
-TEXTURE media/tnt.png tnt_texture
-TEXTURE media/mirror.png mirror_texture
+TEXTURE background.jpeg background
+TEXTURE bomb_party_v4.png tiles_sprites
+TEXTURE hearts.png heart_texture
+TEXTURE boots.png boot_texture
+TEXTURE tnt.png tnt_texture
+TEXTURE mirror.png mirror_texture
 
-FONT media/font.ttf main_font
-FONT media/Raleway-Medium.ttf game_font
+FONT font.ttf main_font
+FONT Raleway-Medium.ttf game_font
 
 ANIMATION
 heart heart_texture STATIC
